syntax = "proto3";

package user;

option go_package = "./proto/user";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {}
  rpc UpdateUserInfo(UpdateUserInfoRequest) returns (UpdateUserInfoResponse) {}
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string created_at = 4;
  string updated_at = 5;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  User user = 4;
}

message GetUserInfoRequest {
  string user_id = 1;
}

message GetUserInfoResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message UpdateUserInfoRequest {
  string user_id = 1;
  string username = 2;
  string email = 3;
}

message UpdateUserInfoResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
} 